# django-reusable-custom-user-model

./: README.md  setup.cfg
account_owner/: apps.py  models.py  serializers.py  views.py
account_owner.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
accounts/: serializers.py  urls.py
accounts_manager.egg-info/: PKG-INFO  SOURCES.txt
